# mcup

./: CHANGELOG.md  README.md  pyproject.toml
examples/mcup/: cli_approval.py
examples/servers/: structured_output_lowlevel.py
examples/servers/simple-auth/mcp_simple_auth/: auth_server.py  legacy_as_server.py  server.py  simple_auth_provider.py  token_verifier.py
examples/servers/simple-prompt/mcp_simple_prompt/: server.py
examples/servers/simple-resource/mcp_simple_resource/: server.py
examples/servers/simple-streamablehttp-stateless/mcp_simple_streamablehttp_stateless/: server.py
examples/servers/simple-streamablehttp/mcp_simple_streamablehttp/: event_store.py  server.py
examples/servers/simple-tool/mcp_simple_tool/: server.py
examples/snippets/clients/: completion_client.py  display_utilities.py  oauth_client.py  parsing_tool_results.py  stdio_client.py  streamable_basic.py
examples/snippets/servers/: basic_prompt.py  basic_resource.py  basic_tool.py  completion.py  direct_execution.py  elicitation.py  fastmcp_quickstart.py  images.py  lifespan_example.py  notifications.py  oauth_server.py  sampling.py  streamable_config.py  streamable_http_basic_mounting.py  streamable_http_host_mounting.py  streamable_http_multiple_servers.py  streamable_http_path_config.py  streamable_starlette_mount.py  structured_output.py  tool_progress.py
examples/snippets/servers/lowlevel/: basic.py  lifespan.py  structured_output.py
src/mcup/: __init__.py
src/mcup/cli/: claude.py  cli.py
src/mcup/client/: __main__.py  auth.py  mcup_session.py  session.py  session_group.py  sse.py  streamable_http.py  websocket.py
src/mcup/client/stdio/: __init__.py
src/mcup/server/: __main__.py  elicitation.py  models.py  session.py  sse.py  stdio.py  streamable_http.py  streamable_http_manager.py  websocket.py
src/mcup/server/auth/: provider.py  routes.py
src/mcup/server/fastmcp/: __init__.py  server.py
src/mcup/server/lowlevel/: server.py
src/mcup/shared/: context.py  exceptions.py  memory.py  message.py  metadata_utils.py  progress.py  session.py  version.py
tests/: test_examples.py  test_mcup_session.py  test_types.py
tests/cli/: test_utils.py
tests/client/: conftest.py  test_auth.py  test_config.py  test_list_methods_cursor.py  test_list_roots_callback.py  test_logging_callback.py  test_output_schema_validation.py  test_resource_cleanup.py  test_sampling_callback.py  test_session.py  test_session_group.py  test_stdio.py  test_stdio_client.py
tests/issues/: test_100_tool_listing.py  test_1027_win_unreachable_cleanup.py  test_129_resource_templates.py  test_141_resource_templates.py  test_152_resource_mime_type.py  test_176_progress_token.py  test_188_concurrency.py  test_192_request_id.py  test_342_base64_encoding.py  test_355_type_error.py  test_552_windows_hang.py  test_88_random_error.py  test_malformed_input.py
tests/server/: test_cancel_handling.py  test_completion_with_context.py  test_lifespan.py  test_lowlevel_input_validation.py  test_lowlevel_output_validation.py  test_lowlevel_tool_annotations.py  test_read_resource.py  test_session.py  test_sse_security.py  test_stdio.py  test_streamable_http_manager.py  test_streamable_http_security.py
tests/server/auth/: test_error_handling.py  test_provider.py
tests/server/auth/middleware/: test_auth_context.py  test_bearer_auth.py
tests/server/fastmcp/: test_elicitation.py  test_func_metadata.py  test_integration.py  test_parameter_descriptions.py  test_server.py  test_title.py  test_tool_manager.py
tests/server/fastmcp/prompts/: test_base.py  (+1 more)
tests/shared/: test_auth.py  test_auth_utils.py  test_httpx_utils.py  test_memory.py  test_progress_notifications.py  test_session.py  test_sse.py  test_streamable_http.py  test_ws.py
(+24 files in other folders)
